# rnng

./: CMakeLists.txt  README.md  clusters-train-berk.txt  get_dictionary.py  get_oracle.py  get_oracle_gen.py  get_unkified_terminals.py  remove_dev_unk.py  sample_input_chinese.txt  sample_input_english.txt
disc/: nt-parser.cc
interpreting-rnng/: README.md  nt-parser-gen-attention-gated-stack-only.cc
nt-parser/: CMakeLists.txt  compressed-fstream.h  eval.h  nt-parser-gen.cc  nt-parser.cc  oracle.cc  pretrained.cc  pretrained.h
utils/: add-fake-preterms-for-eval.pl  cut-corpus.pl  eval.cc  is-estimate-marginal-llh.pl  oracle.cc  oracle.h  replace-unks-in-trees.pl
